# OpenKB

./: README.md  pyproject.toml
openkb/: cli.py  lint.py  locks.py
openkb/agent/: compiler.py
tests/: test_add_command.py  test_compiler.py  test_cross_platform_locks.py
